--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -9,7 +9,28 @@
 <body>
   <div layout:fragment="content" class="container">
 
-    
+    <div class="jumbotron">
+      <h1>Trade Board Games</h1>
+
+      <p>Welcome to TradeIt. This web site strives to make trading your board games with other South Africans easier
+        and safer than ever.</p>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <button type="button" class="btn btn-primary btn-lg btn-block">
+            <span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Start trading your old board games!
+          </button>
+        </div>
+        <div class="col-sm-6">
+          <button type="button" class="btn btn-default btn-lg btn-block">
+            <span class="glyphicon glyphicon-list" aria-hidden="true"></span> Browse all board games for trade
+          </button>
+        </div>
+      </div>
+
+    </div>
+
+
 
   </div>
 </body>
